[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
colored = "2.0.4"
logos = "0.13.0"
regex = "1.9.1"
